--- a/index_free.html
+++ b/index_free.html
@@ -791,7 +791,7 @@
                         <strong>Çözüm Önerileri</strong>
                         <ol>
                             <li>Ollama'nın çalıştığından emin olun: <code>ollama serve</code></li>
-                            <li>API'yi başlatın: <code>uvicorn api_free:app --reload</code></li>
+                            <li>API'yi başlatın: <code>uvicorn api:app --reload</code></li>
                             <li>Model kontrolü: <code>ollama list</code></li>
                             <li>Tarayıcı konsolunu kontrol edin (F12)</li>
                         </ol>
